--- a/src/main/webapp/WEB-INF/views/hotelDetail.html
+++ b/src/main/webapp/WEB-INF/views/hotelDetail.html
@@ -249,6 +249,8 @@ $("#hotel.stars").rating({
 	            var myArr = JSON.parse(xmlhttp.responseText);
 	           	if(myArr.length > 0){
 	           		com(myArr);
+	           	}else{
+	           		appendForum();
 	           	}
 	            
 	        }
