--- a/src/main/webapp/WEB-INF/views/layout/footer.html
+++ b/src/main/webapp/WEB-INF/views/layout/footer.html
@@ -26,7 +26,7 @@
 	<script type="text/javascript" th:src="@{/resources/js/fotorama.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/js/bootstrap-table-all.min.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/js/bootstrap-table-cs-CZ.min.js}"></script>
-	
+	<script type="text/javascript" th:src="@{/resources/js/jquery.autocomplete.min.js}"></script>
 	</div>
 </body>
 
