--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -12,9 +12,9 @@
 	<div class="container">
 		
 		<form class="form-signin" th:action="@{/login}" method="post">
-			<p th:if="${error}">Wrong user or password</p>
-			<p th:if="${msg}">Logout succesfull matafaka</p>
-			<h2 class="form-signin-heading">Přihlašte se prosím</h2>
+			<p th:if="${error}">Špatné přihlašovací údaje</p>
+			<p th:if="${msg}">Odhlášení proběhlo úspěšně</p>
+			<h2 class="form-signin-heading">Přihlášení</h2>
 			<label for="username" class="sr-only">Username</label> <input
 				type="text" id="username" class="form-control"
 				placeholder="Username" name="username" required="required" autofocus="autofocus" />
