--- a/src/main/webapp/WEB-INF/views/userDetail.html
+++ b/src/main/webapp/WEB-INF/views/userDetail.html
@@ -16,8 +16,8 @@
 </div>
 
 <div class="row">
-    <div class="col-lg-3 fotorama" data-nav="thumbs" data-allowfullscreen="true" data-autoplay="true">
-            <img th:each="i : ${images}" class="img" th:attr="src=${i.image},alt=${i.alt}" />
+     <div class="col-lg-3 fotorama" data-nav="thumbs" data-allowfullscreen="true" data-autoplay="true">
+            <img class="img" th:attr="src=${user.image}" />
     </div>
 <!-- TODO: tady se bude odehravat hlasovani -->
     <div class="col-lg-9">
