--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -44,13 +44,13 @@
             
             
             <div th:each="hotel : ${hotels}" >            
-             <div class="col-lg-4 col-sm-6 text-center">
+             <div class="col-lg-4 col-sm-6 text-center" >
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="" />
                 <h3 th:text="${hotel.name}">
                     <small th:text="${hotel.address.city}"></small>
                 </h3>
-                <p>Hodnoceni je:  <span th:text="${hotel.rating}"></span></p>
-
+                <p>Hodnoceni:  <b><span th:text="${hotel.rating}"></span></b>
+                </p>
                 <a href="#" data-th-href="@{/remove/(id=${hotel.hotelId})}" onclick="return confirm('Really remove from basket?');">Remove</a>
                 <a href="#" data-th-href="@{/detail/(id=${hotel.hotelId})}">Detail</a> 
                 <a href="#" data-th-href="@{/hotel/(id=${hotel.hotelId})}">Edit</a>                           
