--- a/src/main/webapp/WEB-INF/views/hotelAddEdit.html
+++ b/src/main/webapp/WEB-INF/views/hotelAddEdit.html
@@ -11,19 +11,22 @@
 	<div class="container">
 	
 		<form accept-charset="utf-8" action="#" th:action="@{/updateHotel/}"
-			th:object="${hotel}" method="post" name="hotel"	>
+			th:object="${hotel}" method="post" name="hotel" data-toggle="validator"	>
 			
-			<h2 th:if="*{website}">Editace hotelu: <span th:text="*{name}"></span></h2>
-			<h2 th:unless="*{website}">Přidání nového hotelu</h2>
+			<h2 th:if="*{description}">Editace hotelu: <span th:text="*{name}"></span></h2>
+			<h2 th:unless="*{description}">Přidání nového hotelu</h2>
 			
 			<div class="form-group">
 				<input type="hidden" th:field="*{hotelId}" /> 
 				<label for="name">Název:</label>
-				<input class="form-control" type="text" th:field="*{name}" />
+				<input class="form-control" type="text" th:field="*{name}" required="required" />
+				<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</span>
 			</div>
 			<div class="form-group">
 				<label for="website">Webová stránka</label> 
-				<input class="form-control" type="text" th:field="*{website}" placeholder="www.neco.cz"/>
+				<input class="form-control" type="text" th:field="*{website}" placeholder="www.neco.cz" required="required" />
+				<div class="help-block with-errors"></div>
+				<span th:if="${#fields.hasErrors('website')}" th:errors="*{website}">Name Error</span>
 			</div>
 			<div class="form-group">
 				<label for="stars">Hvězd: </label>
@@ -45,7 +48,7 @@
 			<div class="form-group">
 				<label for="address.city">Město: </label> <input type="text"
 					class="form-control" 
-					th:field="*{address.city}" />
+					th:field="*{address.city}" required="required"/>
 			</div>
 			
 			<div class="form-group">
@@ -58,19 +61,19 @@
 
 			<div class="form-group">
 				<label for="address.street">Ulice: </label> <input type="text"
-					class="form-control"
+					class="form-control" required="required"
 					th:field="*{address.street}" />
 			</div>
 
 			<div class="form-group">
 				<label for="address.streetNumber">Číslo popisné: </label> <input type="text"
-					class="form-control"
+					class="form-control" required="required"
 					th:field="*{address.streetNumber}" />
 			</div>
 
 			<div class="form-group">
 				<label for="address.zipCode">PSČ: </label> <input type="text"
-					class="form-control"
+					class="form-control" required="required"
 					th:field="*{address.zipCode}" />
 			</div>
 			
@@ -120,8 +123,8 @@
 			<input type="hidden" name="${_csrf.parameterName}"
 				value="${_csrf.token}" />
 
-			<button id="send" th:if="${hotel.website}" type="submit" name="edit">Edit</button>
-			<button id="send" th:unless="${hotel.website}" type="submit" name="add">Přidat hotel</button>
+			<button id="send" th:if="${hotel.description}" type="submit" name="edit">Edit</button>
+			<button id="send" th:unless="${hotel.description}" type="submit" name="add">Přidat hotel</button>
 		</form>
 
 
