--- a/src/main/webapp/WEB-INF/views/hotels.html
+++ b/src/main/webapp/WEB-INF/views/hotels.html
@@ -13,11 +13,51 @@
         <!-- Team Members Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Hotely</h2>
+                <h1 class="page-header">Hotely</h1>
             </div>
-            
-            
-            <div th:each="hotel : ${hotels}" >            
+			<div>
+				<h4>Filtr</h4>
+				
+				<form class="form-inline" accept-charset="utf-8" action="#"
+					th:action="@{/hotels}" th:object="${hotel}" method="post">
+					<div class="form-group">
+						<select class="form-control" th:field="${hotel.stars}">
+							<option th:value="0"> Všechny</option>
+							<option th:value="1">1</option>
+							<option th:value="2">2</option>
+							<option th:value="3">3</option>
+							<option th:value="4">4</option>
+							<option th:value="5">5</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<select class="form-control"
+							th:field="*{address.district.districtId}">
+							<option th:value="0">Všechny</option>
+							<option th:each="d : ${districts}" th:value="${d.districtId}"
+								th:text="${d.name}">Districts</option>
+						</select>
+					</div>					
+					<input type="hidden" name="${_csrf.parameterName}"
+				value="${_csrf.token}" />
+					<button type="submit" class="btn btn-default">Filter</button>
+				</form>
+				</div>
+
+				<div class="col-lg-offset-9 text-center">
+				<form class="form-inline" accept-charset="utf-8" action="#"
+					th:action="@{/detailHotelSearch}" th:object="${hotel}" method="post">
+					<input type="text" id="w-input-search" th:field="${hotel.name}" /> <span>
+						<button id="search" type="submit">Search</button>
+					</span>
+					<input type="hidden" name="${_csrf.parameterName}"
+								value="${_csrf.token}" />
+				</form>
+				</div>
+				<br />
+		
+
+			<div th:each="hotel : ${hotels}" >            
              <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="" />
                 <h3 th:text="${hotel.name}">
@@ -76,6 +116,36 @@
 
 	<div th:replace="/layout/footer :: scripts">
 	</div>
+	<script>
+	
+	$(document).ready(function() {
+
+		$('#w-input-search').autocomplete({
+			serviceUrl: '/pro/getHotels',
+			paramName: "tagName",
+			delimiter: ",",
+		   transformResult: function(response) {
+			    	
+			return {      	
+			  //must convert json to javascript object before process
+			  suggestions: $.map($.parseJSON(response), function(item) {			            	
+			      return { value: item.name, data: item.hotelId };
+			   })		            
+			 };
+			        
+	            }
+			    
+		 });
+		
+					
+	  });
+	
+	
+	
+	
+	</script>
+
+
 
 </body>
 
